Add buttered noodles recipe.
Recipe page and links added.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="./recipes/strawberry-rhubarb-crisp.html">Strawberry Rhubarb Crisp</a></li>
+      <li><a href="./recipes/buttered-noodles.html">Buttered Noodles</a></li>
     </ul>
   </body>
 </html>
