--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
       <li><a href="./recipes/strawberry-rhubarb-crisp.html">Strawberry Rhubarb Crisp</a></li>
       <li><a href="./recipes/buttered-noodles.html">Buttered Noodles</a></li>
+      <li><a href="./recipes/tater-tot-casserole.html">Tater Tot Casserole</a></li>
     </ul>
   </body>
 </html>
